[package]
name = "jieplag"
version = "0.1.0"
authors = ["Jiajie Chen <c@jia.je>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-http = "2.2.0"
actix-web = "3.3.2"
actix-cors = "0.5.3"
actix-rt = "1.1.1"
actix-session = "0.4.0"
anyhow = "1.0.35"
clang = "1.0.2"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.8.2"
lazy_static = "1.4.0"
log = "0.4.11"
regex = "1.4.2"
ring = "0.16.19"
rkr-gst = "0.1.1"
serde = { version = "1.0.118", features = ["derive"] }
structopt = "0.3.21"
walkdir = "2.3.1"
uuid = { version = "0.8.1", features = ["v4"] }
adler32 = "1.2.0"
