[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

core = { path = "../core" }
api = { path = "../api" }

anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
env_logger = "0.10.0"
dotenv = "0.15.0"
walkdir = "2.4.0"
clap = { version = "4.4.6", features = ["derive"] }
