[package]
name = "server"
version = "0.1.0"
authors = ["Jiajie Chen <c@jia.je>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

core = { path = "../core" }
api = { path = "../api" }

actix = "0.13.1"
actix-http = "3.4.0"
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-rt = "2.9.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
diesel = { version = "2.1.3", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.1.0"
log = "0.4.20"
anyhow = "1.0.75"
html-escape = "0.2.13"
serde = { version = "1.0.189", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
ring = "0.17.3"
uuid = { version = "1.4.1", features = ["v4"] }
clang = "2.0.0"
env_logger = "0.10.0"
dotenv = "0.15.0"
clap = { version = "4.4.6", features = ["derive"] }
